centered next button

--- a/src/Game.css
+++ b/src/Game.css
@@ -73,8 +73,13 @@ button[disabled] {
 }
 
 button#next {
-	width: 10%;
 	margin-left: auto;
 	margin-right: auto;	
+	text-align: center;
+}
+
+.next {
+	justify-content: center;
+	display: flex;
 }
 
